change pylint command so that it no longer needs '--output-files' option

--- a/.gitignore
+++ b/.gitignore
@@ -129,8 +129,17 @@ dmypy.json
 doc/*.aux 
 doc/*.log 
 doc/*.out
+doc/*.bbl
+doc/*.fls
+doc/*.blg
+doc/*.fdb_latexmk
+doc/*.synctex.gz
+
 
 # Misc
 test/
 Papers/
 quilt/
+
+# vs code config files
+.vscode/
